Alignment and some spaces fix

--- a/src/components/accordion-control/editor.scss
+++ b/src/components/accordion-control/editor.scss
@@ -23,10 +23,7 @@
 			overflow-x: hidden;
 
 			&:not(.maxi-accordion-control__item__panel--disable-padding) {
-				padding-top: 15px !important;
-				padding-left: 12px !important;
-				padding-right: 12px !important;
-				padding-bottom: 10px !important;
+				padding: 8px 8px 0 8px !important;
 				background-color: #fff;
 			}
 		}
