--- a/src/components/button-group-control/editor.scss
+++ b/src/components/button-group-control/editor.scss
@@ -3,7 +3,7 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 
 	.maxi-base-control {
 		&__field {
@@ -41,13 +41,17 @@
 			z-index: 1;
 			border-bottom: 2px solid var(--maxi-secondary-color) !important;
 			background-color: var(--maxi-white-4-color) !important;
+
+			svg {
+				fill: var(--maxi-secondary-color) !important;
+			}
 		}
 		svg {
 			display: block;
 			width: 20px;
 			height: 100%;
 			margin: 0;
-			fill: var(--maxi-grey-5-color);
+			fill: #000;
 		}
 	}
 	&__full-width {
