--- a/src/components/setting-tabs-control/editor.scss
+++ b/src/components/setting-tabs-control/editor.scss
@@ -58,7 +58,7 @@
 	}
 	.maxi-tabs-content {
 		&:not(.maxi-tabs-content--disable-padding) {
-			padding: 12px;
+			padding: 8px 8px 0;
 			background-color: #fff;
 		}
 
