--- a/src/css/native-components.scss
+++ b/src/css/native-components.scss
@@ -199,14 +199,14 @@
 				background: var(--maxi-secondary-color) !important;
 
 				& + span {
-					top: -6px;
-					width: 16px;
-					height: 16px;
+					top: -8px;
+					width: 20px;
+					height: 20px;
 
 					span {
 						position: relative;
-						width: 16px;
-						height: 16px;
+						width: 14px;
+						height: 14px;
 					}
 				}
 			}
